feat(tasks): add task categories
